--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Humaya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="assets/logoHumaya.png" type="image/x-icon">
 </head>
 <body>
     <div class="container-img">
@@ -95,8 +96,8 @@
               </div>
                 <div class="productoMaicenaHumaya">
                   <div class="infoProductoMaicena">
-                    <h3>ALJAFORES DE MAICENA</h3>
-                    <p>Aljafores de dulce de leche con coco rallado, relleno con 2cm de pura
+                    <h3>ALFAJORES DE MAICENA</h3>
+                    <p>Alfajores de dulce de leche con coco rallado, relleno con 2cm de pura
                       dulzura. Pudiendo elegir entre dulce de leche tradicional, light o choconutt.
                     </p>
                     <p class="infoProductoMaicenaPresentacion">Presentación en caja de 6 y 12 alfajores.</p>
@@ -163,13 +164,23 @@
 </main>
     
     <footer>
-      <div class="logoHumayaFooter"> <img src="assets/logoHumaya.png" alt=""></div>
+      <div class="logoHumayaFooter"> <a href=""><img src="assets/logoHumaya.png" alt=""></a></div>
+      <div class="navegacionHumaya">
+        <h5>NAVEGACIÓN</h5>
+        <a href=""><p>Pregutas frecuentes</p></a>
+        <a href=""><p>Distribuidores</p></a>
+        <a href=""><p>Prensa</p></a> 
+        <a href=""><p>Recetas exclusivas</p></a>  
+      </div>
       <div class="humayaRedes">
-        <img src="" alt="Tiktok">
-        <img src="" alt="Facebook">
-        <img src="" alt="Instagram">
+        <h5>REDES</h5>
+        <a href=""><img src="assets/icontiktok.png" alt="Tiktok"></a>
+        <a href=""><img src="assets/iconfacebook.png" alt="Facebook"></a>
+         <a href=""><img src="assets/iconig.png" alt="Instagram"></a>
       </div>
     </footer>
+
+    <div class="maquetado">Maquetado: Maria Eugenia Kowalczuk Valero - CaC React 23304</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
